# zuga.ee

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  TASKLIST.md  migrate_frontmatter.py  package-lock.json  package.json  pyrightconfig.json
.github/: ISSUE_TEMPLATE.md  NEXTJS_HOMEPAGE_ISSUE.md  SCHEMA_ALIGNMENT_ISSUE.md
.github/prompts/: Ada-the-developer.prompt.md  Kaia-the-extractor.prompt.md  Morgan-the-analyst.prompt.md  add-content.prompt.md  analyst.prompt.md  extract-content.prompt.md  prompt-generator.prompt.md
.github/workflows/: ci.yml
.specify/architecture/: README.md  content-schema.md  phase-1-architecture.md  phase-1-implementation-plan.md
.specify/memory/: constitution.md
apps/api/: README.md  pyproject.toml
apps/api/api/: __init__.py  main.py  models.py
apps/api/tests/: __init__.py  test_main.py  test_models.py
apps/web/: .eslintrc.json  README.md  astro.config.mjs  netlify.toml  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
data/: image_mapping.json
data/html_processing/: PROCESSING_STATUS.md
data/manual_extraction_samples/: EXTRACTION_REGISTRY.md  EXTRACTION_REGISTRY.md.backup  auhinnad-awards.json  auhinnad-awards.md  english-2-2-22.json  english-about-us-1.json  english-inthemood.json  english-landing.json  english-noise.json  english-shame.json  english-shame.md  english-the-great-unknown.json  english-thepassage.json  english-weather-or-not.json  english-weather-or-not.md  etendused-noorele-publikule-2-2-22.json  etendused-noorele-publikule-ilma.json  etendused-noorele-publikule-ilma.md  etendused-noorele-publikule-kaeik.json  etendused-noorele-publikule-landing.json  etendused-noorele-publikule-meelekolu.json  etendused-noorele-publikule-meelekolu.md  etendused-noorele-publikule-voluvaerk.json  etendused-noorele-publikule-zugazuugzuh-zuh-zuh.json  etendused-suurtele-habi.json  etendused-suurtele-habi.md  etendused-suurtele-landing.json  etendused-suurtele-mura.json  etendused-suurtele-mura.md  etendused-suurtele-suur-teadmatus.json  galerii-archive.json  galerii-gallery.json  galerii-gallery.md  index-homepage.json  index-homepage.md  kontakt-2-contact.json  press-zugast.json  press-zugast.md  tegijad-team.json  tegijad-team.md  (+9 more)
data/test_parsed/: 2-2-22.json  2-2-22.md  about-us-1.md  (+11 more)
docs/: CONTENT_MIGRATION.md  DATA_MODEL.md  IMAGE_MAPPING.md  IMAGE_RECOVERY_STATUS.md  MARKDOWN_FORMAT_SPEC.md  PLANNING_PYDANTIC_TYPESCRIPT_INTEGRATION.md  README.md  SITE_STRUCTURE.md  uus algus.md
knowledge-base/: INDEX.md  README.md
scripts/: README.md  README_markdown.md  __init__.py  analyze_boilerplate.py  analyze_image_mapping.py  build_image_mapping.py  content_organizer.py  convert_json_to_markdown.py  download_from_wayback.py  extraction_models.py  frontmatter_models.py  html_beautifier.py  html_cleaner.py  html_models.py  html_parser.py  link_bilingual_pages.py  markdown_converter.py  media_downloader.py  recover_images_from_wayback.py  scrape_wayback.py  test_manual.py  use_image_placeholders.py  wayback_models.py
(+291 files in other folders)
